--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "repoblog",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "authors": [
     "Sean Brennan <sean_m_brennan@mail.com>"
   ],
@@ -11,10 +11,15 @@
     "node": ">=14"
   },
   "type": "module",
+  "module": "dist/index.js",
+  "types": "dist/index.d.ts",
   "files": [
+    "./index*.js",
+    "./index*.js.map",
+    "./index*.d.ts",
     "./RepoBlog*.js",
-    "./RepoBlog*.d.ts",
-    "./RepoBlog*.cjs"
+    "./RepoBlog*.js.map",
+    "./RepoBlog*.d.ts"
   ],
   "dependencies": {
     "@types/react": "^18.3.12",
@@ -44,9 +49,11 @@
   "scripts": {
     "prebuild": "npm install",
     "build": "tsc -b && vite build",
-    "postbuild": "cp -r ./dist/* ./",
+    "prepublish": "npm run build && cp -r ./dist/* ./",
+    "publish": "npm publish",
+    "postpublish": "rm -f ./index*.js ./index*.js.map ./index*.d.ts ./RepoBlog*.js ./RepoBlog*.js.map ./RepoBlog*.d.ts",
     "lint": "eslint \"./**/*.tsx\"",
-    "clean": "rm -rf ./dist ./repoblog*.{js,js.map,d.ts} ./RepoBlog*.{js,js.map,d.ts}",
+    "clean": "rm -rf ./dist && npm run postpublish",
     "pristine": "npm run clean && rm -rf node_modules"
   }
 }
