--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -5,6 +5,7 @@
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "module": "ESNext",
     "skipLibCheck": true,
+    "types": ["node", "vite/client"],
 
     /* Bundler mode */
     "moduleResolution": "bundler",
@@ -24,6 +25,7 @@
     "baseUrl": ".",
   },
   "include": [
-    "./lib/**/*.tsx"
+    "./lib/**/*.tsx",
+    "./lib/**/*.ts"
   ]
 }
